# rl

./: .gitignore  LICENSE  ghci.sh  rl-satton.cabal  rl.cabal
examples/: Examples.hs  Main.hs
examples/Examples/: Ch4_Gambler.hs  Ch4_GridWorld.hs  Ch6_Cliff.hs  Ch_4_Gambler.hs  TickTackToe.hs
examples/Examples/Ch4_GridWorld/: Base.hs  DP.hs  MC.hs  Q.hs  Q_Free.hs  Rules.hs  TD.hs  TDl.hs
examples/Examples/Ch6_Cliff/: Rules.hs  TD.hs  TDl.hs
src/Control/: Break.hs  Break_RL.hs
src/Control/Monad/: Rnd.hs
src/Data/HashMap/: Array.hs  Binary.hs  Internal.hs
src/Graphics/: EasyPlot.hs  TinyPlot.hs
src/RL/: DP.hs  Heredoc.hs  Imports.hs  MC.hs  Q.hs  Q_Free.hs  TD.hs  TDl.hs  Types.hs  Utils.hs
src/RL/MC/: ES.hs  Types.hs
src/RL/Q/: Alg.hs  Interp.hs
src/RL/TD/: Alg.hs  Class.hs  Types.hs
src/Text/: Heredoc.hs  Heredoc_RL.hs
