name:                rl
version:             0.1.0.0
author:              Sergey Mironov
maintainer:          grrwlf@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    RL.DP
    RL.MC
    RL.MC.ES
    RL.MC.Types
    RL.TD
    RL.TD.Class
    RL.TD.Types
    RL.TDl
    RL.Imports
    RL.Types
    Graphics.TinyPlot
    Control.Monad.Rnd
    Data.HashMap.Array
    Data.HashMap.Base
    Data.HashMap.Binary
    Data.HashMap.Internal
    Data.HashMap.Lazy
    Data.HashMap.PopCount
    Data.HashMap.Strict
    Data.HashMap.Unsafe
    Data.HashMap.UnsafeShift
    Data.HashSet

  default-extensions:
    LambdaCase,
    NondecreasingIndentation,
    Rank2Types,
    ViewPatterns,
    ScopedTypeVariables,
    FlexibleInstances,
    FlexibleContexts,
    DataKinds,
    RecordWildCards,
    MultiParamTypeClasses,
    FunctionalDependencies,
    TemplateHaskell,
    QuasiQuotes,
    KindSignatures,
    TupleSections,
    DeriveGeneric

  build-depends:
    base >=4.8 && <4.9,
    containers,
    mtl,
    MonadRandom,
    -- deprecate
    -- break,
    transformers,
    monad-loops,
    lens,
    random,
    heredocs,
    process,
    filepath,
    mersenne-random-pure64,
    stm,
    pretty-show,
    time,
    directory,
    text,
    hashable,
    binary,
    deepseq,
    free

executable example
  default-language: Haskell2010
  hs-source-dirs:   examples
  main-is:          Main.hs
  build-depends:    base >=4.8 && <4.9,
                    rl,
                    containers

  default-extensions:
    LambdaCase,
    NondecreasingIndentation,
    Rank2Types,
    ViewPatterns,
    ScopedTypeVariables,
    FlexibleInstances,
    FlexibleContexts,
    DataKinds,
    RecordWildCards,
    MultiParamTypeClasses,
    FunctionalDependencies,
    TemplateHaskell,
    QuasiQuotes,
    KindSignatures,
    TupleSections,
    DeriveGeneric


